--- a/app/views/layouts/review_site.html.erb
+++ b/app/views/layouts/review_site.html.erb
@@ -20,7 +20,7 @@
               </li>
               <% if user_signed_in? %>
                 <li class="entry_button" style="float: right">
-                  <%= link_to 'サインアウト', "/users/sign_out", method: :delete %>
+                  <%= link_to 'サインアウト', destroy_user_session_path, method: :delete %>
                 </li>
                 <li class="entry_button" style="float: right">
                   <a href="/users/<%= current_user.id %>">まいぺ</a>
